--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
 
 
-	<head>
+<head>
 
   <meta name="author" content="belly flop">
   <meta name="description" content="basketball">
   <meta name="keywords" content="teamwebsite">
-	</head>
+<link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+</head>
  <Body>
   <title>Basketball!</title>
  
