--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 
 <!DOCTYPE html>
 <html>
-
-
 <head>
 
   <meta name="author" content="belly flop">
@@ -38,7 +36,7 @@
        </p>      
     </div>
 
-<a name ="About the Court"></a>
+<a id=about></a>
     <div class="about">
      <p>    
 	There are many lines on a basketball court that you have to know about. The most important would be the out of bounds line which is 
@@ -50,8 +48,7 @@ There is a place called the key which is inside the free throw line.
         </p>	     
        
     </div>
-
- <a name= " How to get better"></a>
+<a id="better"></a>
     <div class="better">
         <p>
     There are many ways to get better at playing basketball. The first step would be to practicing your dribbling. You can get
